# garmin-ia-coach

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  bot.py  coach.py  db.py  docker-compose.yml  garmin_sync.py  main.py  pyproject.toml  requirements.txt
.claude/agents/: async-thread-safety-reviewer.md  prompt-projection-auditor.md  telegram-handler-reviewer.md  tinydb-schema-reviewer.md
.claude/hooks/: block-secrets.sh  ruff-format.sh
docker/: Dockerfile  docker-compose.yml
docs/: bot-response-examples.md
docs/implementations/: coach_quality_phase1.md  coach_quality_phase1_hotfixes.md  coach_quality_phase3.md  coach_tool_calling.md  fix-fetch-activities-400.md  fix-fetch-race-predictions.md  llm_context_slimming.md  logging_strategy.md  non_distance_activity_filtering.md  refactor_oop_phase_1.md  refactor_oop_phase_2.md  refactor_oop_phase_4.md  refactor_oop_phase_5.md  telegram_html_formatting.md  total_data_days_and_remove_old_data.md
docs/presentation/: architecture.md
docs/specs/: llm_context_slimming_plan.md  total_data_days_and_remove_old_data.md
garmin_coach/: bot.py  coach.py  coach_tools.py  context_builder.py  db.py  garmin_sync.py
garmin_coach/app/: config.py  container.py  legacy_bridge.py  logging_setup.py  scheduler.py
garmin_coach/domain/: activity.py  fitness.py  session.py  wellness.py
garmin_coach/prompts/: __init__.py  coach_system.md  coach_system.txt
garmin_coach/services/: briefing_service.py  coach_service.py  coach_session.py  (+5 more)
prompts/: INDEX.md
tests/: test_coach.py  test_db.py  test_garmin_sync.py
(+90 files in other folders)
